proc-macro-error/test-crate/tests/ui/result_unwrap.stderr
error: Result::unwrap_or_abort() test
 --> $DIR/result_unwrap.rs:4:10
  |
4 | make_fn!(result_unwrap);
  |          ^^^^^^^^^^^^^
