proc-macro-error/test-crate/tests/ui/result_unwrap.rs
extern crate test_crate;
use test_crate::make_fn;

make_fn!(result_unwrap);

fn main() {}
